[package]
name = "addres_collection"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# JSON序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV文件处理
csv = "1.3"

# Excel文件处理
rust_xlsxwriter = "0.84"

# 以太坊区块链交互
ethers = "2.0"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 十六进制编码
hex = "0.4"

# 椭圆曲线加密
secp256k1 = { version = "0.27", features = ["recovery", "global-context"] }

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

# 进度条显示
indicatif = "0.17"

# 错误处理
color-eyre = "0.6"
thiserror = "1.0"

# 日志记录
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 其他工具
async-trait = "0.1"
futures = "0.3"
url = "2.4"

# 用于keccak256哈希计算
sha3 = "0.10"

# 缓存
moka = { version = "0.12", features = ["future"] }

[[bin]]
name = "convert_keys"
path = "src/convert_keys.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
